overflow fix for tables

--- a/userstyle.css
+++ b/userstyle.css
@@ -273,6 +273,9 @@ mark {
 
 .jop-tinymce table, table{
     page-break-inside: avoid;
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 /************
